--- a/firebase.json
+++ b/firebase.json
@@ -19,10 +19,7 @@
     }
   ],
   "hosting": {
-    "headers": [
-      {"source": "/service-worker.js", "headers": [{"key": "Cache-Control", "value": "no-cache"}]}
-    ],
-    "public": "./build",
+    "public": "build",
     "ignore": [
       "firebase.json",
       "**/.*",
