--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "where-s-waldo",
   "version": "0.1.0",
-  "homepage": "https://almeida-91.github.io/where-s-waldo",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -17,7 +16,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
